Устранить замечания по проекту Спринта №8 для ревью №2